--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" />
     <link href='http://fonts.googleapis.com/css?family=Roboto:500,300,700,400' rel='stylesheet' type='text/css'>
+    <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/readable/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet" />
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.16/angular.min.js"></script>
@@ -11,35 +12,83 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.9.3/lodash.min.js"></script>
   </head>
   <body ng-app="ovcDailyVersesApp">
-    <div class="header">
-      <div class="container">
-        <h1>OVC Daily Verses</h1>
-      </div>
-    </div>
 
-    <div class="main" ng-controller="MainController">
-      <div class="container">
-
-        <h1>{{ title }}</h1>
-        <h2> It&apos;s the {{ day_of_month }} of {{ month_name }} </h2>
-
-        <div class="col-md-6">
-          <div class="thumbnail">
-            <p class="title"></p>
-            <p class="price"></p>
-            <p class="date"> </p>
-          </div>
+    <!-- NAVBAR TOP -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Daily Verses</a>
         </div>
 
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Daily Bread</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- NAVBAR BOTTOM -->
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <!-- <ul class="pager">
+            <li class="previous"><a href="#">← Yesterday</a></li>
+            <li class="next"><a href="#">Tomorrow →</a></li>
+          </ul> -->
+        </div>
+      </div>
+    </nav>
+
+    <div class="container-fluid">
+      <div class="main" ng-controller="MainController">
+
+        <h1>
+          <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+          Verses for {{day_of_month}} {{ month_name }}
+        </h1>
+        <table class="table table-striped">
+          <tr>
+            <td>
+              New Testament 1
+            </td>
+            <td>
+              {{todays_verses.newt1}} 
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Psalm
+            </td>
+            <td>
+              {{todays_verses.ps}} 
+            </td>
+          </tr>
+          <tr>
+            <td>
+              New Testament 2
+            </td>
+            <td>
+              {{todays_verses.newt2}} 
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Old Testament
+            </td>
+            <td>
+              {{todays_verses.oldt}} 
+            </td>
+          </tr>
+        </table>
       </div>
     </div>
-
-    <div class="footer">
-      <div class="container">
-        <h2>Nice footer</h2>
-      </div>
-    </div>
-
 
     <!-- Modules -->
     <script src="js/app.js"></script>
