fix(responsive): make index resp

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.10.1/angular-moment.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.9.3/lodash.min.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body ng-app="ovcDailyVersesApp">
 
