--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,6 +97,20 @@
 
     <!-- Controllers -->
     <script src="js/controllers/MainController.js"></script>
+    <script>
+      // Verse tagger provided by RefTagger http://reftagger.com/customize/
+      var refTagger = {
+        settings: {
+          bibleVersion: "NIV",      
+          tagChapters: true
+        }
+      };
+      (function(d, t) {
+        var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
+        g.src = "//api.reftagger.com/v2/RefTagger.js";
+        s.parentNode.insertBefore(g, s);
+      }(document, "script"));
+    </script>
   </body>
 </html>
 
