--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,21 @@
 <!doctype html>
 <html>
   <head>
+    <title>OVC Daily Verses</title>
+
     <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" />
     <link href='http://fonts.googleapis.com/css?family=Roboto:500,300,700,400' rel='stylesheet' type='text/css'>
     <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/readable/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="css/main.css" rel="stylesheet" />
 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.16/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.10.1/angular-moment.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.9.3/lodash.min.js"></script>
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -19,19 +25,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Daily Verses</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Daily Bread</a></li>
-          </ul>
+          <a class="navbar-brand" href="#"><span class="fa fa-book" aria-hidden="true"></span> OVC Daily Verses</a>
         </div>
       </div>
     </nav>
@@ -39,11 +33,20 @@
     <!-- NAVBAR BOTTOM -->
     <nav class="navbar navbar-default navbar-fixed-bottom">
       <div class="container-fluid">
-        <div class="navbar-header">
-          <!-- <ul class="pager">
-            <li class="previous"><a href="#">← Yesterday</a></li>
-            <li class="next"><a href="#">Tomorrow →</a></li>
-          </ul> -->
+        <div class="nav navbar-nav navbar-right">
+          <button class="btn btn-primary align-right" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            <span class="fa fa-question" aria-hidden="true"></span>
+          </button>
+          <div class="collapse" id="collapseExample">
+            <div class="well">
+              <ul class="about-list">
+                <li>Reading plan compiled by Andrew Myatt at <a href="http://www.ovc.uk.com">Oxford Vineyard Church</a></li>
+                <li>Developed by Robin Mayfield at <a href="http://degu.io">Degu.io</a></li>
+                <li>Source available at <a href="https://github.com/rujmah/ovc-daily-verses"><span class="fa fa-github"></span></a></li>
+              </ul>
+              
+            </div>
+          </div>
         </div>
       </div>
     </nav>
@@ -52,7 +55,7 @@
       <div class="main" ng-controller="MainController">
 
         <h1>
-          <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+          <span class="fa fa-calendar-o" aria-hidden="true"></span>
           Verses for {{day_of_month}} {{ month_name }}
         </h1>
         <table class="table table-striped">
@@ -90,6 +93,8 @@
           </tr>
         </table>
       </div>
+
+      
     </div>
 
     <!-- Modules -->
