feat(analytics): using google analytics

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,9 +40,11 @@
           <div class="collapse" id="collapseExample">
             <div class="well">
               <ul class="about-list">
-                <li>Reading plan compiled by Andrew Myatt at <a href="http://www.ovc.uk.com">Oxford Vineyard Church</a></li>
-                <li>Developed by Robin Mayfield at <a href="http://degu.io">Degu.io</a></li>
+                <li class="strong">This site uses Google Analytics to track usage data, but not personal data. By using this site you are agreeing to our recording this. Thanks.</li>
+                <li>Reading plan compiled by <a href="office@ovc.uk.com">Andrew Myatt</a> at <a href="http://www.ovc.uk.com">Oxford Vineyard Church</a></li>
+                <li>Developed by <a href="http://degu.io">Degu.io</a></li>
                 <li>Source available at <a href="https://github.com/rujmah/ovc-daily-verses"><span class="fa fa-github"></span></a></li>
+                <li><a href="mailto:support@degu.io?Subject=OVC%20Daily%20Verses%App">Support Queries</a></li>
               </ul>
               
             </div>
@@ -102,6 +104,21 @@
 
     <!-- Controllers -->
     <script src="js/controllers/MainController.js"></script>
+
+
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-64226932-2', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
+    <!-- RefTagger -->
     <script>
       // Verse tagger provided by RefTagger http://reftagger.com/customize/
       var refTagger = {
