--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,7 +64,9 @@
               New Testament 1
             </td>
             <td>
-              {{todays_verses.newt1}} 
+              <a href="{{todays_verses.newt1.niv_link}}">
+                {{todays_verses.newt1.verse}} 
+              </a>
             </td>
           </tr>
           <tr>
@@ -72,7 +74,9 @@
               Psalm
             </td>
             <td>
-              {{todays_verses.ps}} 
+              <a href="{{todays_verses.ps.niv_link}}">
+              {{todays_verses.ps.verse}} 
+              </a>
             </td>
           </tr>
           <tr>
@@ -80,7 +84,9 @@
               New Testament 2
             </td>
             <td>
-              {{todays_verses.newt2}} 
+              <a href="{{todays_verses.newt2.niv_link}}">
+              {{todays_verses.newt2.verse}} 
+              </a>
             </td>
           </tr>
           <tr>
@@ -88,7 +94,9 @@
               Old Testament
             </td>
             <td>
-              {{todays_verses.oldt}} 
+              <a href="{{todays_verses.oldt.niv_link}}">
+              {{todays_verses.oldt.verse}} 
+              </a>
             </td>
           </tr>
         </table>
@@ -102,20 +110,6 @@
 
     <!-- Controllers -->
     <script src="js/controllers/MainController.js"></script>
-    <script>
-      // Verse tagger provided by RefTagger http://reftagger.com/customize/
-      var refTagger = {
-        settings: {
-          bibleVersion: "NIV",      
-          tagChapters: true
-        }
-      };
-      (function(d, t) {
-        var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
-        g.src = "//api.reftagger.com/v2/RefTagger.js";
-        s.parentNode.insertBefore(g, s);
-      }(document, "script"));
-    </script>
   </body>
 </html>
 
